Изменил формы по ТЗ

--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@
    <section class="sec-4">
      <h3>Design tips, tricks, and freebies. Delivered weekly.</h3>
      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam ipsa tempora nullam</p>
-     <div class="sec-4-wrap">
-      <input type="text" placeholder="              Email Adress">
-      <a href="#5" class="sec-4-btn">subscribe</a>
-    </div>
+     <form class="form-mail" action="" method="GET">
+      <div class="sec-4-wrap">
+        <input type="email" name="Design tips Email" required placeholder="              Email Adress">
+        <button type="submit" class="sec-4-btn">subscribe</button>
+      </div>
+    </form>
   </section>
 
     <section class="sec-5">
@@ -130,12 +132,14 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quis commodi iure officiis, eius fugiat nesciunt. Earum laboriosam, alias aperiam sunt ea excepturi inventore unde rerum vitae, facilis, error amet.</p>
         <div class="hrl hrl-left"></div>
         <div class="sec-5-wrap-2">
-          <div class="sec-5-left">
-            <input type="text" class="inname" placeholder="        Name">
-            <input type="text" class="inmail" placeholder="        Your Mail">
-            <input type="text" class="inmsg" placeholder="         Type your message">
-            <a href="#1" class="btn">send message</a>
-          </div>
+            <form class="" action="" method="GET">
+              <div class="sec-5-left">
+                <input type="text" class="inname" name="Form name" required placeholder="        Name">
+                <input type="email" class="inmail" name="Form email" required placeholder="        Your Mail">
+                <input type="text" class="inmsg" name="Form message" required placeholder="         Type your message">
+                <button type="submit" class="sec-5-btn">send message</button>
+              </div>
+            </form>
           <div class="sec-5-right">
             <p>
               <span>contact info</span><br><br>
